# zipher

./: .cursorrules  .eslintrc.cjs  .gitignore  .parcelrc  ARCHITECTURE.md  GET_TESTNET_ZEC.md  PROJECT.md  README.md  RELEASE_NOTES.md  SECURITY.md  SETUP_COMPLETE.md  START_HERE.md  SYNC_IMPLEMENTED.md  TESTING.md  TODO.md  WEBZJS_SETUP.md  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
public/: service-worker.js
public/icons/: README.txt
public/wasm/: zcash_wasm_bg.wasm.d.ts
scripts/: post-build.cjs  post-build.js  post-build.sh  setup-webzjs.sh
src/background/: service-worker.ts
src/content/: content-script.ts
src/context/: WebzjsContext.tsx
src/lib/: logger.ts  offscreen-manager.ts  wallet-manager.ts  wasm-loader.ts  zcash-sync.ts
src/lib/storage/: connected-sites.ts  secure-storage.ts  store.ts  wallet-state.ts
src/lib/webzjs/: wallet.ts
src/offscreen/: offscreen.html  offscreen.ts
src/pages/: ConfirmSeed.tsx  CreateWallet.tsx  Home.tsx  ImportWallet.tsx  Receive.tsx  Send.tsx  SetPassword.tsx  Settings.tsx  TestOffscreen.tsx  Unlock.tsx  Welcome.tsx
src/popup/: App.tsx  index.html  main.tsx
src/styles/: index.css
src/types/: messages.ts  wallet.ts
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
ziphers-tx/: Cargo.toml
ziphers-tx/src/: lib.rs
