[package]
name = "ziphers-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM essentials
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zcash crates (SAME as CipherScan - proven to work!)
zcash_primitives = { version = "0.25", default-features = false }
zcash_note_encryption = "0.4"
orchard = { version = "0.11", default-features = false, features = ["std"] }
subtle = "2.6"
hex = "0.4"
bech32 = "0.11"
zcash_address = "0.10"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single-threaded compilation (NO rayon!)
